# routes/index.js
@@ -5,17 +5,16 @@ const userController = require('../controllers/users');
 router.use('/', require('./swagger'));
 router.use('/users', require('./users'));
 router.use('/items', require('./items'));
-router.use('/deviceUser', require('./deviceUser'));
-router.use('/location', require('./locations'));
+router.use('/location', require('./location'));
 
 router.post('/login', userController.loginUser);
 
-router.get('/logout', (req, res) => {
+router.post('/logout', (req, res) => { // Changed to POST
     req.session.destroy(err => {
         if (err) {
             return res.status(500).json({ message: 'Failed to logout' });
         }
-        res.redirect('/');
+        res.status(200).json({ message: 'Logout successful' });
     });
 });
 
